basic.tf
provider "aws" {
  region     = "us-east-1"
  access_key = "AKIAWRFJHTO6KHEADNPF"
  secret_key = "Rz0jk7YUjNSC68T6N74j0SyRhhVa9ctgOnSwwISn"
}

resource "aws_instance" "example" {
  ami           = "ami-09d3b3274b6c5d4aa"
  instance_type = "t2.micro"
}

# Creating VPC,name, CIDR and Tags
resource "aws_vpc" "dev" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"
  enable_classiclink   = "false"
  tags = {
    Name = "dev"
  }
}
