ec2cj.tf
provider "aws" {
  region  =  "us-east-1"
  access_key = "AKIAWRFJHTO6KHEADNPF"
  secret_key =   "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"  
}  

resource "aws_instance" "server" {
  ami           = "ami-09d3b3274b6c5d4aa"
  instance_type = "t2.micro"
  subnet_id = "subnet-0bda7db1edad90dad"
  security_groups = ["sg-0dc5c035891b5091f"]
  key_name = aws_key_pair.key_id

  tags = {
    name = "terraform.server"
  }
}

resource "aws_key_pair" "key" {
    key_name  =  "sample"
    public_key  = "-----BEGIN OPENSSH PRIVATE KEY-----
b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAABlwAAAAdzc2gtcn
[...]
1iOn0pPrUKRV2dAAAAGmRlbHRhXHNtdXRoeWFsYUA1Q0QyMjIyOTJY
-----END OPENSSH PRIVATE KEY-----"
}
                                                                                                                                                                                                                            -----BEGIN OPENSSH PRIVATE KEY-----
